feat(tenant api): add Service endpoints
